--- a/src/shared/styles/index.css
+++ b/src/shared/styles/index.css
@@ -32,10 +32,11 @@
 
 .profile {
   cursor: pointer;
-  font-size: 1.5rem;
-  padding: 6px;
+  font-size: 15px;
+  padding: 3px;
   border-radius: 50%;
   transition: background-color 0.3s ease;
+  background-color: whitesmoke;
 }
 
 /* Profile hover effects removed */
