--- a/src/shared/styles/index.css
+++ b/src/shared/styles/index.css
@@ -13,8 +13,12 @@
   top: 0;
   z-index: 1;
   box-shadow: 0 2px 10px rgba(30, 58, 138, 0.1);
+
 }
 
+.nav-auth :hover{
+  color: #ffcc00;
+}
 .logo {
   font-size: 1.5rem;
   cursor: pointer;
